# mio-modding-api

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  mio-modding-api.sln  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-check.yml  build-release.yml
include/: modding_api.h
mio-modding-api/: dllmain.cpp  general-util.cpp  hooks.cpp  memory-util.cpp  mio-modding-api.h  mio-modding-api.vcxproj  mio-modding-api.vcxproj.filters  player.cpp  post-build.bat  save-data.cpp
mio-modding-api/Mod/: mod.json
src/: dllmain.cpp  modding_api.cpp
